// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`svelte/Message > renders correctly - custom props 1`] = `
<div>
  <section
    class="ui-message strong"
    id="test"
  >
    MARKDOWN FOR *Test*, false
  </section>
  <!--&lt;Message&gt;-->
</div>
`;

exports[`svelte/Message > renders correctly - default props 1`] = `
<div>
  <section
    class="ui-message "
    id="test"
  >
    MARKDOWN FOR *Test*, false
  </section>
  <!--&lt;Message&gt;-->
</div>
`;

exports[`svelte/Message > renders correctly - default props 2`] = `
<div>
  <section
    class="ui-message "
    id="test"
  >
    MARKDOWN FOR *Test*, false
  </section>
  <!--&lt;Message&gt;-->
</div>
`;
